fix(screen): route terminal keyboard input through network